css: introduce shadow on splash h1 to solve contrast issue with new desktop

--- a/css/gnome3.css
+++ b/css/gnome3.css
@@ -62,7 +62,7 @@ a.faq {
     bottom: -12px;
     left: -4px;
     color: #eeeeec;
-    text-shadow: none;
+    text-shadow: 0 2px 15px #000000;
   }
 
   #splash img {
